goknow-frontend/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: add-x-forwarded-for
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-For: "${request.headers.X-Real-IP},${request.headers.X-Forwarded-For}"

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: feeds-ingress-route
spec:
  entryPoints:
    - web
    # - websecure
  routes:
    - kind: Rule
      match: Host(`goknow.swz-infra.net`)
      middlewares:
        - name: add-x-forwarded-for
      services:
        - name: goknow-frontend-svc
          port: 3000
    - kind: Rule
      match: Host(`goknow.dev.swz-infra.net`)
      middlewares:
        - name: add-x-forwarded-for
      services:
        - name: goknow-frontend-svc
          port: 3000
